# toglion

./: .gitignore  Brewfile  CODEOWNERS  README.md  docker-compose.yml  justfile  package.json  vercel.json
.github/workflows/: main-api.yml
api/: .swcrc  README.md  api.yaml  package.json  serverless.ts  tsconfig.json  tsconfig.paths.json  wrangler.toml
api/src/: index.ts
builder/: index.js  package.json
client/: package.json
dashboard/: .env.local.example  next.config.js  package.json  tsconfig.json  types.ts
dashboard/.storybook/: main.js  preview.js
dashboard/components/: FeatureFlagsList.tsx  FeatureFlagsListV2.tsx  FeaturesFlagsList.stories.tsx  SideNavMenu.tsx
dashboard/hooks/: use-local-storage.ts
dashboard/lib/: config.ts  dynamodb.ts
dashboard/pages/: _app.tsx  index.tsx  test-auth.tsx
dashboard/server/: index.ts
dashboard/services/: errors.ts  flags.ts  organizations.ts  resource.ts
event-gateway/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
event-gateway/proto/: echo.proto
event-gateway/src/: app.rs  main.rs  mainbak.rs  management.rs  settings.rs  sse.rs  websocket.rs
examples/react-app/: package.json
external-api/: package.json  serverless.ts  webpack.config.js
infrastructure/: README.md
infrastructure/000-aws-base/: README.md  acm.tf  aws.tf  iam.tf  kms.tf  locals.tf  outputs.tf  route53.tf  s3.tf  s3_access_logs.tf  variables.tf  vpc.tf
infrastructure/000-aws-global-base/: Pulumi.production-main.yaml  Pulumi.yaml  package.json
infrastructure/001-aws-regional-base/: Pulumi.production-us-east-1.yaml  Pulumi.production-us-east-2.yaml  Pulumi.production-us-west-1.yaml  Pulumi.yaml  (+3 more)
types/: package.json
(+172 files in other folders)
