[package]
name = "event-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3.21"
pretty_env_logger = "0.4.0"
log = "0.4.16"
tokio-stream = "0.1.8"
ulid = "0.5.0"
axum = { version = "0.5.1", features = ["ws", "headers"] }
tracing = "0.1.34"
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["trace", "fs"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tonic = { version = "0.7.1", features = ["tls", "tls-roots", "prost"] }
headers = "0.3.7"
futures = "0.3.21"
prost = "0.8"


[build-dependencies]
tonic-build = { version = "0.7.0", features = ["prost"] }
