[package]
name = "event-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.10.1"
aws-sdk-dynamodb = "0.10.1"
axum = { version = "0.5.1", features = [
  "headers",
  "http1",
  "http2",
  "json",
  "matched-path",
  "multipart",
  "original-uri",
  "tower-log",
  "ws",
] }
config = "0.13.1"
futures = "0.3.21"
futures-util = "0.3.21"
headers = "0.3.7"
# prost = "0.8"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
# tonic = { version = "0.7.1", features = ["tls", "tls-roots", "prost"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["trace", "fs"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
ulid = "0.5.0"

[build-dependencies]
# tonic-build = { version = "0.7.0", features = ["prost"] }
